cabal-version:      3.0
name:               asciimath
version:            1.0.0.0
synopsis:           AsciiMath parsing and processing.
-- description:
homepage:           https://github.org/kozross/hotteok
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
copyright:          (C) Koz Ross 2021
category:           Math
tested-with:        GHC == 8.6.5 || == 8.8.4 || == 8.10.3 || == 9.0.0
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules: Math.Ascii
  build-depends: base >= 4.12 && < 5
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror

  hs-source-dirs:   src
  default-language: Haskell2010
